# ROS2-WEB-monitor

./: README.md
.github/workflows/: Sync external_connections to ROS2-WEB-monitor.yml
external_connections/: README.md  setup.py
external_connections/external_connections/: web_server.py
external_connections/launch/: foxglove_bridge.launch.py
ros/src/external_connections/: LICENSE  package.xml  setup.cfg
ros/src/external_connections/config/: connection_config.yaml
ros/src/external_connections/external_connections/: connection_manager.py  web_server.py
ros/src/external_connections/launch/: external_connections.launch.py  rosbridge_websocket.launch.py  web_dashboard.launch.py
web_monitor/: README.html  index.html  minimal.html  nodes-io.html  simple_ros_test.html
web_monitor/js/: dashboard-init.js  diagnostics-service.js  logs-service.js  nodes-io-service.js  nodes-service.js  parameters-service.js  ros-connection.js  system-monitor.js  topics-service.js  ui-controller.js  video-streaming.js
